[gd_scene load_steps=3 format=3 uid="uid://dhe7gmcrveaai"]

[ext_resource type="Script" path="res://Scenes/User Interface/ReadyTable/fixable_item_ready_ui.gd" id="1_ty1hv"]
[ext_resource type="Theme" uid="uid://ckmygpxkilnmg" path="res://Themes/Button-input.tres" id="2_jl816"]

[node name="Item" type="HBoxContainer"]
script = ExtResource("1_ty1hv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ProductName" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Nama Produk: X
"
fit_content = true
scroll_active = false

[node name="ProductKendala" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Kendala: Lorem Ipsum
"
fit_content = true
scroll_active = false

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Part:
"
fit_content = true
scroll_active = false

[node name="PartName" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 30)
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_jl816")
text = "Ambil"
